# Asubarnipal

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Como Utilizar el bot.txt  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  agente.py  agente1.txt  commit_and_push.bat  config.py  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt  test_bot.py  ✅ Checklist de Evaluación - Calidad de la Ingestion.txt  📖 Cómo usarl commita_and_push.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
api/: auth.py  main.py  middleware.py
app/: service.py
core/: background_manager.py  backup_manager.py  banner.py  bot_logger.py  cache.py  command_history.py  dashboard_logic.py  entity_graph.py  feed_tracker.py  graph_builder.py  graphify_integration.py  hybrid_retriever.py  hybrid_search.py  librarian.py  live_activity.py  llm_router.py  logging_config.py  memory.py  memory_tree.py  rate_limiter.py  research_scheduler.py  session_db.py  skill_registry.py  stt.py  turboquant_config.py  turboquant_engine.py  turboquant_modes.py  vault_manager.py  vision.py  wiki.py  wiki_engine.py  wiki_healer.py
core/wiki/: __init__.py  base.py  ingest.py  obsidian.py  reader.py  search.py
dashboard/: __init__.py  config.py
dashboard/components/: __init__.py  avatar.py
dashboard/tabs/: __init__.py  tab_analytics.py  tab_dashboard.py  tab_feeds.py  tab_grafico.py  tab_hmem.py  tab_latido.py  tab_logs.py  tab_raw.py  tab_salud.py  tab_schema.py  tab_skills.py  tab_wiki.py
data/: manual_agente.md  vaults_config.json  vector.index  wiki.db
data/backups/: backup_history.json
data/turboquant/: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
data/wiki/: investigacion_turboquant.md
docs/: diagrams.md
examples/: README.md  basic_query.py  hmem_demo.py  rest_api_demo.py  vault_management.py
index/: rag.py
interface/: telegram_bot.py
interface/handlers/: __init__.py  agente.py  backup.py  busqueda.py  chat.py  comandos.py  error_handler.py  graphify_handler.py  hmem_commands.py  keyboards.py  scheduled_research.py  validators.py  vault.py  wiki.py  (+1 more)
scripts/: build_index.py  commit_direct.sh  commit_v20.sh  debug_skills.py  run_bot.py  test_bot_simple.py
skills/: __init__.py  default_skills.py  optimize_llm.py  vault_skills.py
tests/: test_api_auth.py  test_api_middleware.py  test_backup_manager.py  test_cache.py  test_config.py  test_integration.py  test_llm_router.py  test_logging_config.py  test_memory.py  test_rate_limiter.py  test_research_scheduler.py  test_startup.py  test_stt.py  test_telegram_handlers.py  test_vault_manager.py  test_vision.py  test_wiki.py
venv_linux/: pyvenv.cfg
(+223 files in other folders)
