[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asubarnipal"
version = "2.0.0"
description = "Autonomous AI Agent with Telegram interface, RAG-powered knowledge base, hybrid memory system (H-Mem), and real-time analytics dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vicente Vila", email = "vicente.vila@example.com"},
]
keywords = ["ai-agent", "telegram-bot", "rag", "llm", "ollama", "knowledge-base", "memory-system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "python-telegram-bot>=20.0",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "tiktoken>=0.5.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pypdf>=3.17.0",
    "psutil>=5.9.0",
    "streamlit>=1.30.0",
    "pydantic>=2.0.0",
    "youtube-transcript-api>=1.0.0",
    "yt-dlp>=2024.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "feedparser>=6.0.0",
    "apscheduler>=3.10.0",
    "langdetect>=1.0.9",
    "deep-translator>=1.11.0",
    "pyyaml>=6.0.0",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "Pillow>=10.0.0",
    "pdf2image>=1.17.0",
    "PyMuPDF>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
asubarnipal-bot = "interface.telegram_bot:main"
asubarnipal-api = "api.main:main"
asubarnipal-dashboard = "dashboard:main"

[tool.setuptools.packages.find]
include = ["api*", "app*", "core*", "index*", "interface*", "processing*", "skills*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
